--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
     "react-native-web": "~0.13.12",
+    "react-native-web-swiper": "^2.2.1",
     "regjsparser": "^0.7.0"
   },
   "devDependencies": {
