--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ui-kitten/components": "^5.1.1",
     "@ui-kitten/eva-icons": "^5.1.1",
     "atob": "^2.1.2",
+    "axios": "^0.24.0",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
     "jsesc": "^3.0.2",
